--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build
+    - run: REACT_APP_STATIC_URL=https://raw.githubusercontent.com/pierluigiortenzi/familytree/refs/heads/main/backup/Untitled_1.ged npm run build
     - run: npm test
     - run: npm run cy:start-and-run
